# src/lib/types.ts
@@ -4,9 +4,16 @@ export interface ApiErrorResponse {
 }
 
 export interface CreateProxyKeyResponse {
+  uuid: string;
   accessUrl: string;
+  createdAt: Date;
 }
 
 export interface DialogProps {
   accessUrl: string;
+}
+
+export interface GetProxyKeyResponse {
+  accessUrl: string;
+  createdAt: Date;
 }
